# Qtchatroom

./: .gitignore  CMakeLists.txt  DEPLOY.md  README.md  main.cpp  run_client.bat  run_server.bat
client/: CMakeLists.txt  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  main.cpp  privatechatdialog.cpp  privatechatdialog.h
server/: CMakeLists.txt  chatserver.cpp  chatserver.h  clienthandler.cpp  clienthandler.h  main.cpp
